Fix table alignment

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -559,6 +559,10 @@
             padding: var(--size-2);
         }
 
+        :where(tbody th) {
+            text-align: end;
+        }
+
         :where(table:not(:has(thead)) th) {
             text-align: end;
         }
